--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='上課內容.html'>上課內容</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='w3.html'>w3</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
