--- a/content/w3.html
+++ b/content/w3.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='上課內容.html'>上課內容</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='w3.html'>w3</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Final << <a href='Final.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>上課內容</h1>
+    <div id="tipue_search_content">Final << <a href='Final.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w3</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
 # 而所導入的 document 可以指向網頁中的特定 id 內容
 from browser import html, document
