--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>課程名稱: 協同產品設計實習 - Collaborative Product Design Practice</p>
-<p>2a or 2b 第6組網站: (<a class="Link--inTextBlock" href="https://mdecd2025.github.io/2a-ag6/">https://mdecd2025.github.io/2a-ag6/</a>)</p>
-<p>2a or 2b 第6組倉儲: (<a href="https://github.com/mdecd2025/2a-ag6">https://github.com/mdecd2025/2a-ag6</a>)</p>
+<p>2ag6網站: (<a class="Link--inTextBlock" href="https://mdecd2025.github.io/2a-ag6/">https://mdecd2025.github.io/2a-ag6/</a>)</p>
+<p>2a6作業倉儲: (<a href="https://github.com/mdecd2025/2a-ag6">https://github.com/mdecd2025/2a-ag6</a>)</p>
 <hr/>
 <p>課程代號: cd2025</p>
 <p>Teams 線上教學:</p>
@@ -54,7 +54,9 @@ brython_div1 &lt;= "6. " + html.A("41223133", href="https://mdecd2025.github.io/
 brython_div1 &lt;= html.BR()
 brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/hw-41223147/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223147")
 </pre>
-<p></p><h1>Brython</h1>
+<p><span>1. </span><a href="https://mdecd2025.github.io/2a-ag6/">2a-ag6</a><a href="https://github.com/mdecd2025/2a-ag6">(repo)</a><br/><span>2. </span><a href="https://mdecd2025.github.io/hw-41223110/">41223110</a><a href="https://github.com/mdecd2025/hw-41223110">(repo)</a><br/><span>3. </span><a href="https://mdecd2025.github.io/hw-Linjiahong41223125/">41223125</a><a href="https://github.com/mdecd2025/hw-Linjiahong41223125">(repo)</a><br/><span>4. </span><a href="https://mdecd2025.github.io/hw-hong41223129/">41223129</a><a href="https://github.com/mdecd2025/hw-hong41223129">(repo)</a><br/><span>5. </span><a href="https://mdecd2025.github.io/hw-CHN41223132/">41223132</a><a href="https://github.com/mdecd2025/hw-CHN41223132">(repo)</a><br/><span>6. </span><a href="https://mdecd2025.github.io/hw-41223133/">41223133</a><a href="https://github.com/mdecd2025/hw-41223133">(repo)</a><br/><span>7. </span><a href="https://mdecd2025.github.io/hw-41223147/">41223147</a><a href="https://github.com/mdecd2025/hw-41223147">(repo)</a></p>
+<h1>w5</h1>
+<h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
