--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='w3.html'>w3</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,8 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Final.html'>Next</a> >> Final<br /><h1>About</h1>
 <p>課程名稱: 協同產品設計實習 - Collaborative Product Design Practice</p>
-<p>2a or 2b 第6組網站: (<a class="Link--inTextBlock" href="https://mdecd2025.github.io/2a-ag6/">https://mdecd2025.github.io/2a-ag6/</a>)</p>
-<p>2a or 2b 第6組倉儲: (<a href="https://github.com/mdecd2025/2a-ag6">https://github.com/mdecd2025/2a-ag6</a>)</p>
+<p>2ag6網站: (<a class="Link--inTextBlock" href="https://mdecd2025.github.io/2a-ag6/">https://mdecd2025.github.io/2a-ag6/</a>)</p>
+<p>2ag6作業倉儲: (<a href="https://github.com/mdecd2025/2a-ag6">https://github.com/mdecd2025/2a-ag6</a>)</p>
 <hr/>
 <p>課程代號: cd2025</p>
 <p>Teams 線上教學:</p>
