--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>課程名稱: 協同產品設計實習 - Collaborative Product Design Practice</p>
 <p>2ag6網站: (<a class="Link--inTextBlock" href="https://mdecd2025.github.io/2a-ag6/">https://mdecd2025.github.io/2a-ag6/</a>)</p>
-<p>2a6作業倉儲: (<a href="https://github.com/mdecd2025/2a-ag6">https://github.com/mdecd2025/2a-ag6</a>)</p>
+<p>2ag6作業倉儲: (<a href="https://github.com/mdecd2025/2a-ag6">https://github.com/mdecd2025/2a-ag6</a>)</p>
 <hr/>
 <p>課程代號: cd2025</p>
 <p>Teams 線上教學:</p>
