--- a/content/w5.html
+++ b/content/w5.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='task.html'>task</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -223,7 +223,8 @@ img.add_border {
 <p><strong>2.添加物體</strong>：點擊左上方的“Add”按鈕，選擇需要的場景物體（例如地面、牆壁等）。每次添加後可以透過右側的屬性視窗來設置每個物體的具體參數。</p>
 <p><strong>3. 創建機器人</strong>：在 Add -&gt; Robot 中選擇一個機器人模型，如差速車、機械手臂等，並為其設置適當的參數。</p>
 <p><strong>4. 調整視角和環境</strong>：設置仿真環境的背景、光線等。</p>
-<p><strong>5. 儲存場景</strong>：完成場景設置後，選擇 File -&gt; Save World 儲存當前的場景。</p><br />w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><strong>5. 儲存場景</strong>：完成場景設置後，選擇 File -&gt; Save World 儲存當前的場景。</p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
