--- a/content/task1.html
+++ b/content/task1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cdproject</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Final << <a href='Final.html'>Previous</a> <a href='task1.html'>Next</a> >> task1<br /><h1>task</h1>
-<br />Final << <a href='Final.html'>Previous</a> <a href='task1.html'>Next</a> >> task1</div>
+    <div id="tipue_search_content">task << <a href='task.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>task1</h1>
+<br />task << <a href='task.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
