--- a/config/content.htm
+++ b/config/content.htm
@@ -23,6 +23,7 @@
 <h1>task</h1>
 <h2>task1</h2>
 <h2>task2</h2>
+<h2>task3</h2>
 <h1>w3</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
 # 而所導入的 document 可以指向網頁中的特定 id 內容
