--- a/content/task4.html
+++ b/content/task4.html
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
-<br />task2 << <a href='task2.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
+    <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>task4</h1>
+<br />task3 << <a href='task3.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
