--- a/content/w5.html
+++ b/content/w5.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a></li></ul><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a></li></ul><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
