--- a/config/content.htm
+++ b/config/content.htm
@@ -27,7 +27,8 @@
 <p><span><em><strong>2. </strong></em>目錄中的 start_ipv6.bat 啟動可攜系統，</span>接著修改 start_ipv6.bat，利用 Search - Replace，Find 欄位填上 Python311，Replace 欄位填上 Python313 後，按下 Replace All，便可將啟動檔中所有 Python311 設定改為 Python313，另存修改後的檔案為 start_python313.bat。</p>
 <p><em><strong>3. </strong></em><span>以 stop.bat 關閉 start_ipv6.bat 開啟的可攜系統，改以心建立的 start_python313.bat 開啟可攜環境，之後在命令列輸入 python，確認目前的 Python 版本為 3.13.2 後，利用 Ctrl + z 退出 Python 後，利用 pip list 確認目前的 Python 3.13.2 系統尚未配置 pip 模組管理工具。</span></p>
 <p><span><em><strong>4. </strong></em>在命令列中，以 python get-pip.py 安裝 pip 工具，完成後，以 pip list 確認 pip.exe 已經配置完成。</span></p>
-<p><span><em><strong>5.</strong></em> 最後在命令列中，以 pip install flask flask_cors bs4 lxml pelican markdown 安裝 cmsimde 網際內容管理系統啟動所需的 Python 模組後，此可攜系統中的 Python 3.13.2 套件已經可以用來維護個人作業倉儲與分組倉儲。</span></p><h2>task2</h2>
+<p><span><em><strong>5.</strong></em> 最後在命令列中，以 pip install flask flask_cors bs4 lxml pelican markdown 安裝 cmsimde 網際內容管理系統啟動所需的 Python 模組後，此可攜系統中的 Python 3.13.2 套件已經可以用來維護個人作業倉儲與分組倉儲。</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/E3gKzG2Henk?si=CqjaE5bnKzBVBGFO" title="YouTube video player" width="450"></iframe></p><h2>task2</h2>
 <h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
