新增task3學員4122110與41223129使用Solvespace建立平面四連桿系統零組件影片

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -82,8 +82,19 @@
 <p class="" data-end="685" data-start="651">匯出<span> </span><span style="color: #eb0ed5;"><code data-end="665" data-start="654">mysession</code> </span>設定為<span style="color: #eb0ed5;"> <code data-end="685" data-start="670">mysession.reg</code></span></p>
 </li>
 </ul>
+<p><span style="color: #eb0ed5;">6. 設定 Git 倉儲 URL</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">[remote "origin"]
+    url = git@mysession:用戶名/倉儲名.git
+    fetch = +refs/heads/*:refs/remotes/origin/*</pre>
+<p><span>最後完成推送：</span></p>
+<pre class="brush:java;auto-links:false;toolbar:false" contenteditable="false">git push origin main</pre>
 <p><br/><br/><br/><br/></p><h2>task3</h2>
-<h2>task4</h2>
+<h4>使用 Solvespace 建立<span>平面四連桿</span>系統零組件：</h4>
+<p>41223110零件繪製過程:</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/cxOOCkYF2Lc?si=l4uaEBHS7urT87rh" title="YouTube video player" width="450"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oBYFx0VL45E?si=G5Brbw9-6V9wny5j" title="YouTube video player" width="450"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3LitHFYlss?si=BEEaUCDlD3EmQ6yQ" title="YouTube video player" width="450"></iframe></p>
+<p>41223129<span>零件繪製過程:</span></p><h2>task4</h2>
 <h2>task5</h2>
 <h1>w3</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
