--- a/config/content.htm
+++ b/config/content.htm
@@ -89,7 +89,14 @@
 <p><span>最後完成推送：</span></p>
 <pre class="brush:java;auto-links:false;toolbar:false" contenteditable="false">git push origin main</pre>
 <p><br/><br/><br/><br/></p><h2>task3</h2>
-<h2>task4</h2>
+<h4>使用 Solvespace 建立<span>平面四連桿</span>系統零組件：</h4>
+<p>41223110零件繪製過程:</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/cxOOCkYF2Lc?si=l4uaEBHS7urT87rh" title="YouTube video player" width="450"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oBYFx0VL45E?si=G5Brbw9-6V9wny5j" title="YouTube video player" width="450"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3LitHFYlss?si=BEEaUCDlD3EmQ6yQ" title="YouTube video player" width="450"></iframe></p>
+<p>41223129<span>零件繪製過程:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/0jO74Z-bIWk?si=eipRrglhGfrH94mm" title="YouTube video player" width="450"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8RfdjdIEh7E?si=9l-zIiv4oTKdT1cR" title="YouTube video player" width="450"></iframe></p><h2>task4</h2>
 <h2>task5</h2>
 <h1>w3</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
