--- a/content/task3.html
+++ b/content/task3.html
@@ -144,17 +144,18 @@ img.add_border {
         </header>
     <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
 <h4>使用 Solvespace 建立<span>平面四連桿</span>系統零組件：</h4>
-<p>41223110零件繪製過程:</p>
+<p>41223110零件繪製:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oBYFx0VL45E?si=G5Brbw9-6V9wny5j" title="YouTube video player" width="450"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3LitHFYlss?si=BEEaUCDlD3EmQ6yQ" title="YouTube video player" width="450"></iframe></p>
-<p>41223129<span>零件繪製過程:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/0jO74Z-bIWk?si=eipRrglhGfrH94mm" title="YouTube video player" width="450"></iframe></p>
+<p>41223129<span>零件組裝:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8RfdjdIEh7E?si=9l-zIiv4oTKdT1cR" title="YouTube video player" width="450"></iframe></p>
-<p>41223132<span>零件繪製過程:</span></p>
+<p>41223132<span>零件繪製:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkSNTsu4qcw?si=6VypXzf6Q2UHuPUI" title="YouTube video player" width="450"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/pXoLlFGRkr8?si=Za0MHEoxL73qJGMe" title="YouTube video player" width="450"></iframe></p>
-<p>41223133<span>零件繪製過程:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-P79XXjD4Gw?si=t2xNe9xPJqVopHvB" title="YouTube video player" width="450"></iframe></p><br />task2 << <a href='task2.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
+<p>41223133<span>零件繪製:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-P79XXjD4Gw?si=t2xNe9xPJqVopHvB" title="YouTube video player" width="450"></iframe></p>
+<p><span>41223147</span><span>零件組裝:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xaiags2S11Q?si=cCCoJEHwA4tJTLVC" title="YouTube video player" width="450"></iframe></p><br />task2 << <a href='task2.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
       <div class="container">
