--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -90,18 +90,21 @@
 <pre class="brush:java;auto-links:false;toolbar:false" contenteditable="false">git push origin main</pre>
 <p><br/><br/><br/><br/></p><h2>task3</h2>
 <h4>使用 Solvespace 建立<span>平面四連桿</span>系統零組件：</h4>
-<p>41223110零件繪製過程:</p>
+<p>41223110零件繪製:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oBYFx0VL45E?si=G5Brbw9-6V9wny5j" title="YouTube video player" width="450"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/s3LitHFYlss?si=BEEaUCDlD3EmQ6yQ" title="YouTube video player" width="450"></iframe></p>
-<p>41223129<span>零件繪製過程:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/0jO74Z-bIWk?si=eipRrglhGfrH94mm" title="YouTube video player" width="450"></iframe></p>
+<p>41223129<span>零件組裝:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8RfdjdIEh7E?si=9l-zIiv4oTKdT1cR" title="YouTube video player" width="450"></iframe></p>
-<p>41223132<span>零件繪製過程:</span></p>
+<p>41223132<span>零件繪製:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkSNTsu4qcw?si=6VypXzf6Q2UHuPUI" title="YouTube video player" width="450"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/pXoLlFGRkr8?si=Za0MHEoxL73qJGMe" title="YouTube video player" width="450"></iframe></p>
-<p>41223133<span>零件繪製過程:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-P79XXjD4Gw?si=t2xNe9xPJqVopHvB" title="YouTube video player" width="450"></iframe></p><h2>task4</h2>
-<h2>task5</h2>
+<p>41223133<span>零件繪製:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-P79XXjD4Gw?si=t2xNe9xPJqVopHvB" title="YouTube video player" width="450"></iframe></p>
+<p><span>41223147</span><span>零件組裝:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xaiags2S11Q?si=cCCoJEHwA4tJTLVC" title="YouTube video player" width="450"></iframe></p><h2>task4</h2>
+<p><span><a href="https://mdecd2025.github.io/2a-ag4/content/Brython.html?src=https://gist.githubusercontent.com/zhe41223118/de8d72a66126859139f42a25276bfa25/raw/1dd61ed37c8457f99353d5ddfd539bd27ff28a83/ag">2a分組網站與倉儲連結</a></span></p>
+<p><span><a href="https://mdecd2025.github.io/2a-ag4/content/Brython.html?src=https://gist.githubusercontent.com/zhe41223118/8ab2bde273de00d794d7d46d7540dc08/raw/8a7fdc0fc7cd89c04f5019fc620a0677f50b4fd6/bg">2b分組網站與倉儲連結</a></span></p>
+<p><span>上列程式已經給出兩班當時已經參與分組的學員 Github 帳號，因此只需要從 <a href="https://mde.tw/list/2a.txt">https://mde.tw/list/2a.txt</a> 讀取學員的學號與 Github 帳號，並且在 for 迴圈中，逐一用學員的 Github 帳號相對於各班已經參與分組的學員 Github 帳號，並且列出特定學員的 Github 帳號不在前述已經參與分組的學員帳號數列中，即可列出截至當時尚未納入分組的學員學號。</span></p><h2>task5</h2>
 <h1>w3</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
 # 而所導入的 document 可以指向網頁中的特定 id 內容
