--- a/content/Exam3.html
+++ b/content/Exam3.html
@@ -143,8 +143,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>Exam3</h1>
-<p></p>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p>41223132</p>
+<p>伺服端</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
+<p>客戶端</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hRGl-pyPu9o?si=lmLZlNPX0vYK5WgK" title="YouTube video player" width="560"></iframe></p><br />w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
