--- a/config/content.htm
+++ b/config/content.htm
@@ -248,7 +248,9 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
 <p>客戶端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hRGl-pyPu9o?si=lmLZlNPX0vYK5WgK" title="YouTube video player" width="560"></iframe></p>
-<p></p><h1>Brython</h1>
+<p></p>
+<h2>3-2video</h2>
+<h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
