--- a/content/3-2video.html
+++ b/content/3-2video.html
@@ -143,7 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">3-1video << <a href='3-1video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>3-2video</h1>
-<br />3-1video << <a href='3-1video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><a href="./../downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
+<p></p><br />3-1video << <a href='3-1video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
