--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -243,14 +243,15 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><span>1. </span><a href="https://mdecd2025.github.io/2a-ag6/">2a-ag6</a><a href="https://github.com/mdecd2025/2a-ag6">(repo)</a><br/><span>2. </span><a href="https://mdecd2025.github.io/hw-41223110/">41223110</a><a href="https://github.com/mdecd2025/hw-41223110">(repo)</a><br/><span>3. </span><a href="https://mdecd2025.github.io/hw-Linjiahong41223125/">41223125</a><a href="https://github.com/mdecd2025/hw-Linjiahong41223125">(repo)</a><br/><span>4. </span><a href="https://mdecd2025.github.io/hw-hong41223129/">41223129</a><a href="https://github.com/mdecd2025/hw-hong41223129">(repo)</a><br/><span>5. </span><a href="https://mdecd2025.github.io/hw-CHN41223132/">41223132</a><a href="https://github.com/mdecd2025/hw-CHN41223132">(repo)</a><br/><span>6. </span><a href="https://mdecd2025.github.io/hw-41223133/">41223133</a><a href="https://github.com/mdecd2025/hw-41223133">(repo)</a><br/><span>7. </span><a href="https://mdecd2025.github.io/hw-41223147/">41223147</a><a href="https://github.com/mdecd2025/hw-41223147">(repo)</a></p>
 <h1>Exam3</h1>
 <h2>3-1video</h2>
+<p><a href="/downloads/41223147Exam3-1.7z">41223147Exam3-1.7z</a></p>
 <p>41223132</p>
 <p>伺服端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
 <p>客戶端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hRGl-pyPu9o?si=lmLZlNPX0vYK5WgK" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<h2>3-2video</h2>
-<h1>Brython</h1>
+<p></p><h2>3-2video</h2>
+<p><a href="/downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
+<p></p><h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
