--- a/content/3-3video.html
+++ b/content/3-3video.html
@@ -2,7 +2,7 @@
         <head>
         <title>cdproject</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Final << <a href='Final.html'>Previous</a> <a href='task1.html'>Next</a> >> task1<br /><h1>task</h1>
-<br />Final << <a href='Final.html'>Previous</a> <a href='task1.html'>Next</a> >> task1</div>
+    <div id="tipue_search_content">3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>3-3video</h1>
+<p></p>
+<br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
