--- a/content/3-2video.html
+++ b/content/3-2video.html
@@ -144,7 +144,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video<br /><h1>3-2video</h1>
 <p><a href="./../downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
-<br />3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video</div>
+<p><a href="./../downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p><br />3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video</div>
         
     <!-- footer -->
       <div class="container">
